--- a/i18n/babel.cfg
+++ b/i18n/babel.cfg
@@ -1,3 +1,5 @@
 [python: **.py]
 [jinja2: **/templates/**.html]
-extensions=
+extensions=jinja2.ext.autoescape,jinja2.ext.with_
+# The code was run with line 5 instead of line 3
+# extensions=
