--- a/queuing_system_in_js/package.json
+++ b/queuing_system_in_js/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint",
     "check-lint": "lint [0-9]*.js",
-    "test": "jest",
+    "test": "./node_modules/.bin/mocha --require @babel/register --exit",
     "dev": "nodemon --exec babel-node --presets @babel/preset-env"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
     "express": "^4.17.1",
     "kue": "^0.11.6",
@@ -24,13 +25,13 @@
     "@babel/preset-env": "^7.23.5",
     "@babel/register": "^7.8.0",
     "babel-jest": "^29.7.0",
-    "chai": "^4.2.0",
+    "chai": "^4.3.10",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.17.0",
     "jest": "^29.7.0",
-    "mocha": "^6.2.2",
+    "mocha": "^6.2.3",
     "nodemon": "^2.0.2",
     "request": "^2.88.0",
     "sinon": "^7.5.0"
